force-app/main/default/objects/Site_Survey__c/fields/QATEB02__c.field-meta.xml
<CustomField>
    <fullName>QATEB02__c</fullName>
    <label>TRENCH_OPEN_HOLE_BARRIERS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>