force-app/main/default/objects/Site_Survey__c/fields/QATEB03__c.field-meta.xml
<CustomField>
    <fullName>QATEB03__c</fullName>
    <label>TRENCH_CAVE-IN_PREVENTION</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>