force-app/main/default/objects/Site_Survey__c/fields/QAWH01__c.field-meta.xml
<CustomField>
    <fullName>QAWH01__c</fullName>
    <label>WINCH_CONTROLS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>