force-app/main/default/objects/Site_Survey__c/fields/QAWH02__c.field-meta.xml
<CustomField>
    <fullName>QAWH02__c</fullName>
    <label>WINCH_HOUR_METER</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>