force-app/main/default/objects/Site_Survey__c/fields/QAWH03__c.field-meta.xml
<CustomField>
    <fullName>QAWH03__c</fullName>
    <label>WINCH_GUARDING</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Choices</valueSetName>
    </valueSet>
</CustomField>