force-app/main/default/objects/Site_Survey__c/fields/Related_Incident__c.field-meta.xml
<CustomField>
    <fullName>Related_Incident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Incident</label>
    <referenceTo>Incident_Tracker__c</referenceTo>
    <relationshipName>Site_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>