force-app/main/default/objects/Site_Survey__c/fields/Scope_of_work__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_work__c</fullName>
    <label>Scope of work</label>
    <type>TextArea</type>
</CustomField>