force-app/main/default/objects/Site_Survey__c/fields/T_Mobile_Site__c.field-meta.xml
<CustomField>
    <fullName>T_Mobile_Site__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>T-Mobile Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Site Surveys (T-Mobile Site)</relationshipLabel>
    <relationshipName>Site_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>