force-app/main/default/objects/Site_Survey__c/fields/T_Mobile_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>T_Mobile_Site_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>T-Mobile Site</label>
    <referenceTo>Location_Site_Safety__c</referenceTo>
    <relationshipName>Site_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>