force-app/main/default/objects/Site_Survey__c/fields/Technician_2__c.field-meta.xml
<CustomField>
    <fullName>Technician_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician #2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Site_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>