force-app/main/default/objects/Site_Survey__c/fields/Technician_3__c.field-meta.xml
<CustomField>
    <fullName>Technician_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician #3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Site_Surveys5</relationshipName>
    <type>Lookup</type>
</CustomField>