force-app/main/default/objects/Site_Survey__c/fields/Technician_4__c.field-meta.xml
<CustomField>
    <fullName>Technician_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician #4</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Site_Surveys1</relationshipName>
    <type>Lookup</type>
</CustomField>