force-app/main/default/objects/Site_Survey__c/fields/Tower_Owner__c.field-meta.xml
<CustomField>
    <fullName>Tower_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Site_Surveys3</relationshipName>
    <type>Lookup</type>
</CustomField>